# api-scoring-risque

./: .gitignore  README.md  pyproject.toml  requirements.txt
api_scoring_risque/: manage.py
api_scoring_risque/api_scoring_risque/: .env.example  asgi.py  logging_config.py  settings.py  urls.py  views.py  wsgi.py
api_scoring_risque/application_risque/: admin.py  api_urls.py  api_views.py  apps.py  audit.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  validators.py
api_scoring_risque/donnees/: generate_sample_data.py
api_scoring_risque/gestion_modeles/: entrainement.py  explicabilite_shap.py  gestionnaire_modele.py  preparation_donnees.py
